fix: update .gitignore to remove dist/ and adjust package.json main entry point feat: modify product-routes.ts to uncomment express import and router initialization

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
     "dev": "dotenv -e .env -- nodemon --watch src --ext ts --exec tsx src/server.ts",
-    "start": "ts-node src/server.ts",
+    "start": "tsx src/server.ts",
+    "build": "tsc",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
