fix: update .gitignore to remove dist/ directory, change main entry in package.json, and enhance route loading logic in server.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "strict": true,
+    "types": ["node"], // <-- Added
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
