--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "zod": "^3.25.45",
-    "@types/node": "^22.15.30"
-  },
-  "devDependencies": {
+    "@types/node": "^22.15.30",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/body-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/pg": "^8.15.2",
+    "@types/pg": "^8.15.2"
+  },
+  "devDependencies": {
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.1",
     "ts-node": "^10.9.2",
